2005-02-19  Stefan Jahn  <stefan@lkcc.org>

	* grammar-data.tex (section{Qucs dataset grammar}): Added
	a small comment about dataset content.

2005-02-17  Raimund 'Raimi' Jacob  <raimi@lkcc.org>

	* grammar-data.tex: Added grammar for the dataset. Put all
	grammars into one appendix, share the introduction.

2005-02-16  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex: Added Raimund Jacob as author.

	* hbanalysis.tex (subsection{Creating Transadmittance Matrix}): 
	Fixed some typos.

	* grammar-qucs.tex (chapter{Qucs netlist grammar}): Fixed
	comments on each grammer item as required.  Fixed some typos.

	* acnoise.tex (section{The Algorithm}): Added a note about the
	transposed LU decomposed matrix during AC noise analysis.

2005-02-13  Stefan Jahn  <stefan@lkcc.org>
 
	* acnoise.tex (subsection{Noise voltage source}): Documented
	AC noise matrices for noise voltage sources.
 
2005-02-13  Raimund 'Raimi' Jacob  <raimi@lkcc.org>

	* grammar-qucs.tex (chapter{Qucs netlist grammar}): Also finished
	the lexical structure. Re-ordering of the syntax.

2005-02-12  Raimund 'Raimi' Jacob  <raimi@lkcc.org>

	* grammar-qucs.tex (chapter{Qucs netlist grammar}): Begin of some
	documentation of the netlist file. Move this and the bibliography
	into an appendix.

2005-02-05  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex: Updated copyright dates.

	* Makefile.am (PSFILES): Added missing 'MNAnoise*.eps' files.

2004-12-08  Stefan Jahn  <stefan@lkcc.org>

	* coplanar.tex (chapter{Coplanar components}): New file
	containing documentation about coplanar components.  Thanks
	to Vincent.

	* technical.tex: Added copyright for Vincent.

	* transient.tex (subsection{MOS Gate Capacitances}): Added
	section about integration of the Meyer MOS capacitances.

2004-11-23  Stefan Jahn  <stefan@lkcc.org>

	* qucsconv.1: Added --noaction (or -a) help text.

	* qucsator.1: Added --check (or -c) help text.

	* dcanalysis.tex (subsection{Operational amplifier}): Also