@@ -10,6 +10,8 @@ i686-pc-cygwin			gcc 2.95.3-10	0.0.2	ok
 i386-pc-mingw32			gcc 2.95.3-10	0.0.2	ok, using -mno-cygwin
 i386-pc-mingw32			gcc 2.95.3-6	0.0.3	ok, cross compiled
 i386-unknown-freebsd4.10	gcc 2.95.4	0.0.3	ok
+i386-unknown-freebsd4.11	gcc 2.95.4	0.0.5	ok
+i386-unknown-freebsd5.3		gcc 3.4.2	0.0.5	ok
 i386-unknown-netbsdelf2.99.15	gcc 3.3.3	0.0.5	ok 
 sparc-sun-solaris2.8		gcc 2.95.3	0.0.4	ok
 sparc-sun-solaris2.9		gcc 2.95.3	0.0.2	ok
