@@ -47,6 +47,8 @@ allowed. You can also use the backslash ($\backslash$) to continue a
 line on the next line. This works almost everywhere but in
 comment lines.
 
+\addvspace{12pt}
+
 The grammars are presented using a version of the Extended Backus-Naur
 Form (EBNF) which works as follows:
 
