@@ -160,13 +160,9 @@ V_K\\
  \\
 \end{matrix}
 \end{equation}
-<<<<<<< hbanalysis.tex
+
 After having solved it, $Z_{1,n}$...$Z_{N+M,n}$ are obtained
-simply by substration of the node voltages:
-=======
-After having solved it, we got $Z_{1,n}$...$Z_{N+M,n}$
 simply by subtraction of the node voltages:
->>>>>>> 1.3
 \begin{equation}
 Z_{m,n} = V_k - V_l
 \end{equation}
